# YAWT

./: .gitignore  AGENTS.md  CMakeLists.txt  DESIGN.md  Doxyfile  REEVALUATE_FEATURES.CSV  UNIMPLEMENTED.md  WORKLIST.md  YAWT.md  features.db  findings.csv  re-evaluation-plan.md  run-review-example.md  run_reviewer.py  wt_plan.md
.opencode/agent/: rfc-reviewer.md
docs/: bintree.dot  draft-ietf-webtrans-overview-12.txt
docs/doxygen/: YAWT_8md.html  annotated.html  annotated_dup.js  capsule_8h.html  capsule_8h.js  capsule_8h_source.html  classes.html  corpus_8h.html  corpus_8h.js  corpus_8h_source.html  crypt_8h.html  crypt_8h.js  crypt_8h_source.html  dir_8f74abbdbad6e793f5da56469e42956a.html  dir_8f74abbdbad6e793f5da56469e42956a.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  err_8h.html  err_8h.js  err_8h_source.html  files.html  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_f.html  functions_g.html  functions_h.html  functions_i.html  functions_k.html  functions_l.html  functions_m.html  functions_n.html  functions_o.html  functions_p.html  functions_q.html  functions_r.html  functions_s.html  (+291 more)
docs/doxygen-public/: annotated.html  annotated_dup.js  classes.html  crypt_8h.html  crypt_8h.js  crypt_8h_source.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_f.html  functions_g.html  functions_h.html  functions_i.html  functions_k.html  functions_l.html  functions_m.html  functions_n.html  functions_o.html  functions_p.html  functions_q.html  functions_r.html  functions_s.html  functions_t.html  functions_u.html  functions_v.html  functions_vars.html  functions_vars_b.html  functions_vars_c.html  functions_vars_d.html  functions_vars_e.html  functions_vars_f.html  functions_vars_g.html  functions_vars_h.html  functions_vars_i.html  (+182 more)
docs/doxygen-public/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  defines_1.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_1.js  functions_0.js  groups_0.js  groups_1.js  groups_2.js  groups_5.js  groups_7.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_11.js  variables_12.js  (+12 more)
docs/doxygen/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  defines_1.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_4.js  files_0.js  files_1.js  files_2.js  files_4.js  files_5.js  files_6.js  files_7.js  (+49 more)
examples/: CMakeLists.txt  h3_client.c  h3_server.c  wt_client.c  wt_server.c
fuzz/: CMakeLists.txt  fuzz_capsule.c  fuzz_h3_parse_frame.c  fuzz_h3_settings.c  fuzz_parse_frame.c  fuzz_parse_packet.c  fuzz_qpack.c
include/: callbacks.h  capsule.h  corpus.h  crypt.h  err.h  events.h  h3.h  h3_header.h  h3_types.h  logger.h  qpack.h  quic.h  quic_connection.h  quic_types.h  security.h  wt.h  wt_types.h
include/impl/: compile_flags.txt  h3_types.h  quic_types.h  wt_types.h
include/impl/.cache/clangd/index/: h3_types.h.1508D01E0FC698D3.idx  quic_types.h.3BB8FFF13843FE45.idx
scripts/: load_csv.py
src/: CMakeLists.txt  capsule.c  corpus.c  crypt.c  h3.c  h3_header.c  qpack.c  quic.c  quic_connection.c  security.c  test.c  wt.c
src/cmake/: yawtConfig.cmake.in
src/tests/: test_qpack_prefix_int.c
tests/: CMakeLists.txt  dump_huffman_data.c  test_h3.c  test_h3.h  test_huffman.c  test_huffman.h  test_main.c  test_qpack_literal_literal.c  test_qpack_literal_literal.h  test_qpack_prefix_int.c  test_qpack_prefix_int.h
tests/integration/: test_h3_client.py  test_h3_server.py  test_wt.py
tests/integration/neqo-test/wt-test-client/: Cargo.toml
tests/integration/neqo-test/wt-test-client/src/: main.rs
